Small changes to config and custom auth provider.